--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,98 @@
+site_name: aWords
 
+# Repository
+repo_name: 'keygenqt/flutter-aWords'
+repo_url: 'https://github.com/keygenqt/flutter-aWords'
+site_dir: 'pages'
+
+# Navigation
+nav:
+  - Home:
+      - index.md
+      - API: web/index.md
+      - Flutter: server/index.md
+      - Aurora: mobile/index.md
+  - API:
+      - Overview:
+          - api/index.md
+  - Flutter:
+      - Overview:
+          - flutter/index.md
+  - Aurora:
+      - Overview:
+          - aurora/index.md
+
+# Extensions
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - tables
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+
+# Customization
+extra:
+  analytics:
+    provider: google
+    property: !ENV GOOGLE_ANALYTICS_KEY
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/keygenqt
+    - icon: fontawesome/brands/telegram
+      link: https://t.me/keygenqt
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/vitaliy-zarubin-6a8257150/
+
+# Custom CSS
+extra_css:
+  - /pages/custom.css
+
+# Configuration
+theme:
+  name: 'material'
+  custom_dir: docs/assets
+  language: 'en'
+  favicon: images/favicon.ico
+  icon:
+    logo: material/basket
+  features:
+    - content.action.edit
+    - content.code.annotate
+    - content.code.copy
+    - content.tooltips
+    - navigation.indexes
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+    - navigation.prune
+    - toc.integrate
+  palette:
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+  font:
+    text: Roboto
+    code: Roboto Mono
