--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ markdown_extensions:
       emoji_generator: !!python/name:materialx.emoji.to_svg
       options:
         custom_icons:
-          - docs/overrides/.icons
+          - icons
 
 # Customization
 extra:
@@ -85,14 +85,10 @@ theme:
     - toc.integrate
   palette:
     - scheme: default
-      primary: indigo
-      accent: indigo
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - scheme: slate
-      primary: indigo
-      accent: indigo
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
