--- a/apps/server/pubspec.yaml
+++ b/apps/server/pubspec.yaml
@@ -7,16 +7,23 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  get_it: ^7.2.0
   archive: ^3.3.6
   args: ^2.3.1
+  cupertino_icons: ^1.0.2
   mason_logger: ^0.2.4
   pub_updater: ^0.2.4
-  cupertino_icons: ^1.0.2
+  drift: ^2.5.0
+  path: ^1.8.3
+  json_annotation: ^4.8.0
 
 dev_dependencies:
-  build_runner: ^2.0.0
+  build_runner: ^2.3.3
   build_verify: ^3.0.0
-  build_version: ^2.0.0
+  build_version: ^2.0.01
   mocktail: ^0.3.0
   test: ^1.19.2
   very_good_analysis: ^3.1.0
+  drift_dev: ^2.5.2
+  json_serializable: ^6.6.1
+
