--- a/apps/server/pubspec.yaml
+++ b/apps/server/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   drift: ^2.5.0
   path: ^1.8.3
   json_annotation: ^4.8.0
+  pointycastle: ^3.6.2
 
 dev_dependencies:
   build_runner: ^2.3.3
