--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,9 +18,10 @@ nav:
       - Libraries: api/libraries.md
       - Dartdoc: /flutter-aWords/server_doc/api/
       - Methods:
-          - Errors1: api/methods/common_errors.md
-          - Errors2: api/methods/common_errors2.md
-          - Errors3: api/methods/common_errors3.md
+          - Common:
+            - Errors1: api/methods/common_errors.md
+            - Errors2: api/methods/common_errors2.md
+            - Errors3: api/methods/common_errors3.md
   - Flutter:
       - Overview:
           - flutter/index.md
