--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Gen server dart doc
         working-directory: ./apps/server
-        run: dart doc
+        run: dart doc .
 
       - name: Move doc server
         working-directory: ./apps/server
