--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
         with:
           python-version: 3.x
 
+      - name: Pub get
+        run: cd apps/server && dart pub get
+
+      - name: Dart build_runner
+        run: cd apps/server && dart run build_runner build
+
       - name: Gen server dart doc
         run: cd apps/server && dart doc .
 
