--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,19 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Pub get
-        run: cd apps/server && dart pub get
+      - name: Server app pub get
+        working-directory: ./apps/server
+        run: dart pub get
 
-      - name: Dart build_runner
-        run: cd apps/server && dart run build_runner build
+      - name: Server app build_runner
+        working-directory: ./apps/server
+        run: dart run build_runner build --delete-conflicting-outputs
 
-      - name: Gen server dart doc
-        run: cd apps/server && dart doc .
+      - name: Server app dart doc
+        working-directory: ./apps/server
+        run: dart doc .
 
-      - name: Move doc server
+      - name: Server app move doc
         working-directory: ./apps/server
         run: |
           mv doc ../../docs/server_doc
