--- a/apps/server/pubspec.yaml
+++ b/apps/server/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   json_annotation: ^4.8.0
   pointycastle: ^3.6.2
   validated: ^2.0.0
+  # https://pub.dev/packages/uuid
+  uuid: ^3.0.7
 
 dev_dependencies:
   build_runner: ^2.3.3
