--- a/apps/server/pubspec.yaml
+++ b/apps/server/pubspec.yaml
@@ -17,9 +17,12 @@ dependencies:
   path: ^1.8.3
   json_annotation: ^4.8.0
   pointycastle: ^3.6.2
+  encrypt: ^5.0.1
   validated: ^2.0.0
   # https://pub.dev/packages/uuid
   uuid: ^3.0.7
+  # https://pub.dev/packages/uuid
+  settings_yaml: ^5.0.0
 
 dev_dependencies:
   build_runner: ^2.3.3
