--- a/apps/server/pubspec.yaml
+++ b/apps/server/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   # https://pub.dev/packages/args
   # Parses raw command-line arguments into a set of options and values.
-  args: ^2.3.1
+  args: ^2.4.0
   # https://pub.dev/packages/drift
   # Drift is a reactive persistence library for Flutter and Dart, built on top of sqlite.
   drift: ^2.5.0
@@ -65,5 +65,5 @@ dev_dependencies:
   test: ^1.19.2
   # https://pub.dev/packages/very_good_analysis
   # This package provides lint rules for Dart and Flutter which are used at Very Good Ventures.
-  very_good_analysis: ^3.1.0
+  very_good_analysis: ^4.0.0+1
 
