Header, change locale, how it work. Add HOCON.

--- a/apps/website/lib/l10n/common/en.conf
+++ b/apps/website/lib/l10n/common/en.conf
@@ -1,6 +1,6 @@
 {
-  "copyright": "Copyright © {year} KeyGenQt, All rights reserved. Powered by Flutter.",
-  "@copyright": {
+  "common_copyright": "Copyright © {year} KeyGenQt, All rights reserved. Powered by Flutter.",
+  "@common_copyright": {
     "description": "Footer copyright",
     "placeholders": {
       "year": {
@@ -9,12 +9,12 @@
       }
     }
   },
-  "footer_title_features": "Features",
-  "footer_desc": "Leave notes and paper cards at home and learn a foreign language anywhere with aWords.",
-  "footer_create_card": "On the site you can create flashcards to study. The list of available words is huge. There are 50 FreeDict dictionaries available for every taste and preference.",
-  "footer_stats_card": "You can view your flashcard study statistics.",
-  "footer_friends": "Your statistics will be available to all your friends. You can administer access on the site.",
-  "footer_title_create_card": "Create cards",
-  "footer_title_stats_card": "Stats",
-  "footer_title_friends": "Friends"
+  "common_footer_title_features": "Features",
+  "common_footer_desc": "Leave notes and paper cards at home and learn a foreign language anywhere with aWords.",
+  "common_footer_create_card": "On the site you can create flashcards to study. The list of available words is huge. There are 50 FreeDict dictionaries available for every taste and preference.",
+  "common_footer_stats_card": "You can view your flashcard study statistics.",
+  "common_footer_friends": "Your statistics will be available to all your friends. You can administer access on the site.",
+  "common_footer_title_create_card": "Create cards",
+  "common_footer_title_stats_card": "Stats",
+  "common_footer_title_friends": "Friends",
 }
