--- a/apps/website/lib/l10n/home/ru.conf
+++ b/apps/website/lib/l10n/home/ru.conf
@@ -1,3 +1,18 @@
 {
-  "main_welcome": "Добро пожаловать"
+  // MAIN
+  "home_main_welcome": "Добро пожаловать",
+  "home_main_title": "Мы поможем вам выучить слова раз и навсегда",
+  "home_main_text": "Давайте учить слова вместе. Это просто! Вы просто создаете карточку со словами и учите их в одном из нескольких доступных режимов.",
+  "home_main_btn": "Регистрация",
+  // STEPS
+  "home_steps_title": "Как это работает",
+  "home_steps_text": "Выполните несколько шагов, чтобы начать пользоваться приложением и преуспеть в изучении языка.",
+  "home_steps_item1_title": "Регистрация",
+  "home_steps_item1_text": "Для того, чтобы вас идентифицировать в системе, вам необходимо зарегистрироваться.",
+  "home_steps_item2_title": "Карточки",
+  "home_steps_item2_text": "Вы можете использовать уже созданные карточки или создать свой собственный набор слов для изучения.",
+  "home_steps_item3_title": "Приложение",
+  "home_steps_item3_text": "Установите приложение на ваш смартфон. Доступны приложения для Android и ОС Aurora.",
+  "home_steps_item4_title": "Наслаждайтесь",
+  "home_steps_item4_text": "Изучай иностранные слова где хочешь. Просматривайте статистику. Делитесь результатами с друзьями.",
 }
