--- a/apps/website/lib/l10n/common/ru.conf
+++ b/apps/website/lib/l10n/common/ru.conf
@@ -1,11 +1,11 @@
 {
-  "copyright": "Copyright © {year} KeyGenQt, Все права защищены. Работает на Flutter.",
-  "footer_title_features": "функции",
-  "footer_desc": "Оставте записки и бумажные карточки дома и изучайте иностранный язык где угодно с помощью aWords.",
-  "footer_create_card": "На сайте вы можете создавать карточки для изучения. Список доступных слов огромен. Доступно 50 словарей FreeDict на любой вкус и предпочтения.",
-  "footer_stats_card": "Вы можете просматривать свою статистику по изучению карточек.",
-  "footer_friends": "Ваша статистика будет доступна всем вашим друзьям. Администрировать доступы можно на сайте.",
-  "footer_title_create_card": "Создание карт",
-  "footer_title_stats_card": "Статистика",
-  "footer_title_friends": "Друзья"
+  "common_copyright": "Copyright © {year} KeyGenQt, Все права защищены. Работает на Flutter.",
+  "common_footer_title_features": "функции",
+  "common_footer_desc": "Оставте записки и бумажные карточки дома и изучайте иностранный язык где угодно с помощью aWords.",
+  "common_footer_create_card": "На сайте вы можете создавать карточки для изучения. Список доступных слов огромен. Доступно 50 словарей FreeDict на любой вкус и предпочтения.",
+  "common_footer_stats_card": "Вы можете просматривать свою статистику по изучению карточек.",
+  "common_footer_friends": "Ваша статистика будет доступна всем вашим друзьям. Администрировать доступы можно на сайте.",
+  "common_footer_title_create_card": "Создание карт",
+  "common_footer_title_stats_card": "Статистика",
+  "common_footer_title_friends": "Друзья",
 }
