--- a/apps/website/lib/l10n/home/en.conf
+++ b/apps/website/lib/l10n/home/en.conf
@@ -1,3 +1,18 @@
 {
-  "main_welcome": "Welcome to aWords"
+  // MAIN
+  "home_main_welcome": "Welcome to aWords",
+  "home_main_title": "We will help you learn foreign words once and for all",
+  "home_main_text": "Let's learn words together. It's simple! You simply create a flashcard with words and learn them in one of several available modes.",
+  "home_main_btn": "Registration",
+  // STEPS
+  "home_steps_title": "How it works",
+  "home_steps_text": "Follow a few steps to start using the app and succeed in learning a foreign language.",
+  "home_steps_item1_title": "Registration",
+  "home_steps_item1_text": "In order to identify you in the system, you need to register. It's quite simple.",
+  "home_steps_item2_title": "Cards",
+  "home_steps_item2_text": "You can use already created cards or you can create your own set of words to study.",
+  "home_steps_item3_title": "Application",
+  "home_steps_item3_text": "Install the application. Apps for Android and Aurora OS are available.",
+  "home_steps_item4_title": "Enjoy",
+  "home_steps_item4_text": "Learn foreign words wherever you want. Share results with friends.",
 }
