--- a/apps/website/pubspec.yaml
+++ b/apps/website/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   url_strategy: ^0.2.0
   intl: ^0.17.0
   lottie: ^2.2.0
+  scoped_model: ^2.0.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
