Fix error lottie

--- a/apps/website/lib/l10n/common/en.conf
+++ b/apps/website/lib/l10n/common/en.conf
@@ -17,4 +17,7 @@
   "common_footer_title_create_card": "Create cards",
   "common_footer_title_stats_card": "Stats",
   "common_footer_title_friends": "Friends",
+  // 404
+  "common_404_error": "Looks like we can't find the page you're looking for.",
+  "common_404_error_btn": "To Home",
 }
