--- a/apps/website/lib/l10n/common/ru.conf
+++ b/apps/website/lib/l10n/common/ru.conf
@@ -8,4 +8,7 @@
   "common_footer_title_create_card": "Создание карт",
   "common_footer_title_stats_card": "Статистика",
   "common_footer_title_friends": "Друзья",
+  // 404
+  "common_404_error": "Похоже, мы не можем найти страницу, которую вы ищете.",
+  "common_404_error_btn": "На главную",
 }
