Added home download

--- a/apps/website/lib/l10n/home/en.conf
+++ b/apps/website/lib/l10n/home/en.conf
@@ -15,4 +15,10 @@
   "home_steps_item3_text": "Install the application. Apps for Android and Aurora OS are available.",
   "home_steps_item4_title": "Enjoy",
   "home_steps_item4_text": "Learn foreign words wherever you want. Share results with friends.",
+  // DOWNLOAD
+  "home_apps_title1": "Download & enjoy",
+  "home_apps_title2": "Download",
+  "home_apps_title3": "from your app store",
+  "home_apps_text": "The app is available for Android and Aurora OS.",
+
 }
