--- a/apps/website/lib/l10n/home/ru.conf
+++ b/apps/website/lib/l10n/home/ru.conf
@@ -15,4 +15,9 @@
   "home_steps_item3_text": "Установите приложение на ваш смартфон. Доступны приложения для Android и ОС Aurora.",
   "home_steps_item4_title": "Наслаждайтесь",
   "home_steps_item4_text": "Изучай иностранные слова где хочешь. Просматривайте статистику. Делитесь результатами с друзьями.",
+  // DOWNLOAD
+  "home_apps_title1": "Скачать и наслаждаться",
+  "home_apps_title2": "Скачать",
+  "home_apps_title3": "с вашего магазина приложений.",
+  "home_apps_text": "Приложение доступно для Android и Aurora OS."
 }
