Added help block

--- a/apps/website/lib/l10n/home/en.conf
+++ b/apps/website/lib/l10n/home/en.conf
@@ -20,5 +20,8 @@
   "home_apps_title2": "Download",
   "home_apps_title3": "from your app store",
   "home_apps_text": "The app is available for Android and Aurora OS.",
-
+  // HELP
+  "home_help_title": "Need more help?",
+  "home_help_text": "If you have any questions, you can email them to me.",
+  "home_help_btn": "To write a message",
 }
