--- a/apps/website/lib/l10n/home/ru.conf
+++ b/apps/website/lib/l10n/home/ru.conf
@@ -20,4 +20,8 @@
   "home_apps_title2": "Скачать",
   "home_apps_title3": "с вашего магазина приложений.",
   "home_apps_text": "Приложение доступно для Android и Aurora OS."
+  // HELP
+  "home_help_title": "Есть вопросы?",
+  "home_help_text": "Если у вас остались вопросы вы можете написать их мне на почту.",
+  "home_help_btn": "Написать сообщение",
 }
