--- a/apps/website/pubspec.yaml
+++ b/apps/website/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   lottie: ^2.2.0
   scoped_model: ^2.0.0
   get_it: ^7.2.0
+  url_launcher: 6.1.9
 
 dev_dependencies:
   flutter_test:
