--- a/apps/website/pubspec.yaml
+++ b/apps/website/pubspec.yaml
@@ -14,17 +14,21 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.3
   cupertino_icons: ^1.0.2
+  dio: ^5.0.0
   url_strategy: ^0.2.0
   intl: ^0.17.0
   lottie: ^2.2.0
   scoped_model: ^2.0.0
   get_it: ^7.2.0
   url_launcher: 6.1.9
+  json_annotation: ^4.8.0
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  json_serializable: ^6.6.1
 
 flutter:
   generate: true
