--- a/apps/website/pubspec.yaml
+++ b/apps/website/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   get_it: ^7.2.0
   url_launcher: 6.1.9
   json_annotation: ^4.8.0
+  # https://pub.dev/packages/validated
+  # The ultimate dart + flutter string validators.
+  validated: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.3.3
