Refactoring login form

--- a/apps/website/lib/l10n/app_en.conf
+++ b/apps/website/lib/l10n/app_en.conf
@@ -7,5 +7,6 @@
 # parse-hocon package.conf > package.json
 {
   include file("common/en.conf"),
+  include file("login/en.conf"),
   include file("home/en.conf"),
 }
