--- a/apps/website/lib/l10n/app_ru.conf
+++ b/apps/website/lib/l10n/app_ru.conf
@@ -7,5 +7,6 @@
 # parse-hocon package.conf > package.json
 {
   include file("common/ru.conf"),
+  include file("login/ru.conf"),
   include file("home/ru.conf"),
 }
