Refactoring, added sign up

--- a/apps/website/lib/l10n/app_en.conf
+++ b/apps/website/lib/l10n/app_en.conf
@@ -7,6 +7,7 @@
 # parse-hocon package.conf > package.json
 {
   include file("common/en.conf"),
-  include file("login/en.conf"),
+  include file("sign_in/en.conf"),
+  include file("sign_up/en.conf"),
   include file("home/en.conf"),
 }
