--- a/apps/website/lib/l10n/app_ru.conf
+++ b/apps/website/lib/l10n/app_ru.conf
@@ -7,6 +7,7 @@
 # parse-hocon package.conf > package.json
 {
   include file("common/ru.conf"),
-  include file("login/ru.conf"),
+  include file("sign_in/ru.conf"),
+  include file("sign_up/ru.conf"),
   include file("home/ru.conf"),
 }
