--- a/apps/website/lib/l10n/home/en.conf
+++ b/apps/website/lib/l10n/home/en.conf
@@ -3,7 +3,7 @@
   "home_main_welcome": "Welcome to aWords",
   "home_main_title": "We will help you learn foreign words once and for all",
   "home_main_text": "Let's learn words together. It's simple! You simply create a flashcard with words and learn them in one of several available modes.",
-  "home_main_btn": "Registration",
+  "home_main_btn": "Sign Up",
   // STEPS
   "home_steps_title": "How it works",
   "home_steps_text": "Follow a few steps to start using the app and succeed in learning a foreign language.",
