Localization error forms

--- a/apps/website/lib/l10n/sign_up/en.conf
+++ b/apps/website/lib/l10n/sign_up/en.conf
@@ -6,4 +6,8 @@
   "signUp_field_btn_submit": "Submit",
   "signUp_field_btn_reg": "Sign In",
   "signUp_successfully": "Registration passed successfully!",
+  "signUp_validate_name_empty": "Please enter name.",
+  "signUp_validate_email_empty": "Please enter email.",
+  "signUp_validate_email_not_match": "Email is not match.",
+  "signUp_validate_password_empty": "Please enter password.",
 }
