--- a/apps/website/lib/l10n/sign_up/ru.conf
+++ b/apps/website/lib/l10n/sign_up/ru.conf
@@ -6,4 +6,8 @@
   "signUp_field_btn_submit": "Отправить",
   "signUp_field_btn_reg": "Авторизация",
   "signUp_successfully": "Регистрация прошла успешно!",
+  "signUp_validate_name_empty": "Пожалуйста, введите имя.",
+  "signUp_validate_email_empty": "Пожалуйста, введите email.",
+  "signUp_validate_email_not_match": "Электронная почта не соответствует.",
+  "signUp_validate_password_empty": "Пожалуйста, введите пароль.",
 }
