--- a/apps/website/lib/l10n/sign_in/ru.conf
+++ b/apps/website/lib/l10n/sign_in/ru.conf
@@ -5,4 +5,7 @@
   "signIn_field_btn_submit": "Отправить",
   "signIn_field_btn_reg": "Регистрация",
   "signIn_successfully": "Авторизация прошла успешно!",
+  "signIn_validate_email_empty": "Пожалуйста, введите email.",
+  "signIn_validate_email_not_match": "Электронная почта не соответствует.",
+  "signIn_validate_password_empty": "Пожалуйста, введите пароль.",
 }
