--- a/apps/website/lib/l10n/sign_in/ru.conf
+++ b/apps/website/lib/l10n/sign_in/ru.conf
@@ -1,5 +1,5 @@
 {
-  "signIn_title": "Аворизация",
+  "signIn_title": "Авторизация",
   "signIn_field_email": "Email",
   "signIn_field_passw": "Пароль",
   "signIn_field_btn_submit": "Отправить",
