--- a/apps/website/lib/l10n/sign_in/en.conf
+++ b/apps/website/lib/l10n/sign_in/en.conf
@@ -3,7 +3,7 @@
   "signIn_field_email": "Email",
   "signIn_field_passw": "Password",
   "signIn_field_btn_submit": "Submit",
-  "signIn_field_btn_reg": "Sign Up",
+  "signIn_field_btn_signUp": "Sign Up",
   "signIn_successfully": "Authorization passed successfully!",
   "signIn_validate_email_empty": "Please enter email.",
   "signIn_validate_email_not_match": "Email is not match.",
