--- a/apps/website/lib/l10n/sign_in/ru.conf
+++ b/apps/website/lib/l10n/sign_in/ru.conf
@@ -3,7 +3,7 @@
   "signIn_field_email": "Email",
   "signIn_field_passw": "Пароль",
   "signIn_field_btn_submit": "Отправить",
-  "signIn_field_btn_reg": "Регистрация",
+  "signIn_field_btn_signUp": "Регистрация",
   "signIn_successfully": "Авторизация прошла успешно!",
   "signIn_validate_email_empty": "Пожалуйста, введите email.",
   "signIn_validate_email_not_match": "Электронная почта не соответствует.",
