--- a/apps/website/lib/l10n/sign_up/ru.conf
+++ b/apps/website/lib/l10n/sign_up/ru.conf
@@ -4,7 +4,7 @@
   "signUp_field_email": "Email",
   "signUp_field_passw": "Пароль",
   "signUp_field_btn_submit": "Отправить",
-  "signUp_field_btn_reg": "Авторизация",
+  "signUp_field_btn_signIn": "Авторизация",
   "signUp_successfully": "Регистрация прошла успешно!",
   "signUp_validate_name_empty": "Пожалуйста, введите имя.",
   "signUp_validate_email_empty": "Пожалуйста, введите email.",
