--- a/apps/website/lib/l10n/common/en.conf
+++ b/apps/website/lib/l10n/common/en.conf
@@ -9,6 +9,10 @@
       }
     }
   },
+  // header
+  "common_header_sign_in": "Sign In",
+  "common_header_sign_out": "Sign Out",
+  // footer
   "common_footer_title_features": "Features",
   "common_footer_desc": "Leave notes and paper cards at home and learn a foreign language anywhere with aWords.",
   "common_footer_create_card": "On the site you can create flashcards to study. The list of available words is huge. There are 50 FreeDict dictionaries available for every taste and preference.",
