--- a/apps/website/lib/l10n/common/ru.conf
+++ b/apps/website/lib/l10n/common/ru.conf
@@ -1,5 +1,9 @@
 {
   "common_copyright": "Copyright © {year} KeyGenQt, Все права защищены. Работает на Flutter.",
+  // header
+  "common_header_sign_in": "Вход",
+  "common_header_sign_out": "Выход",
+  // footer
   "common_footer_title_features": "функции",
   "common_footer_desc": "Оставте записки и бумажные карточки дома и изучайте иностранный язык где угодно с помощью aWords.",
   "common_footer_create_card": "На сайте вы можете создавать карточки для изучения. Список доступных слов огромен. Доступно 50 словарей FreeDict на любой вкус и предпочтения.",
