--- a/apps/website/lib/l10n/home/ru.conf
+++ b/apps/website/lib/l10n/home/ru.conf
@@ -18,7 +18,7 @@
   // DOWNLOAD
   "home_apps_title1": "Скачать и наслаждаться",
   "home_apps_title2": "Скачать",
-  "home_apps_title3": "с вашего магазина приложений.",
+  "home_apps_title3": "с магазина приложений",
   "home_apps_text": "Приложение доступно для Android и Aurora OS."
   // HELP
   "home_help_title": "Есть вопросы?",
