--- a/apps/website/lib/l10n/sign_in/en.conf
+++ b/apps/website/lib/l10n/sign_in/en.conf
@@ -4,7 +4,7 @@
   "signIn_field_passw": "Password",
   "signIn_field_btn_submit": "Submit",
   "signIn_field_btn_signUp": "Sign Up",
-  "signIn_successfully": "Authorization passed successfully!",
+  "signIn_successfully": "We are glad to see you again!",
   "signIn_validate_email_empty": "Please enter email.",
   "signIn_validate_email_not_match": "Email is not match.",
   "signIn_validate_password_empty": "Please enter password.",
