--- a/apps/website/lib/l10n/sign_up/en.conf
+++ b/apps/website/lib/l10n/sign_up/en.conf
@@ -5,7 +5,7 @@
   "signUp_field_passw": "Password",
   "signUp_field_btn_submit": "Submit",
   "signUp_field_btn_signIn": "Sign In",
-  "signUp_successfully": "Registration passed successfully!",
+  "signUp_successfully": "Welcome!",
   "signUp_validate_name_empty": "Please enter name.",
   "signUp_validate_email_empty": "Please enter email.",
   "signUp_validate_email_not_match": "Email is not match.",
