Start page stats

--- a/apps/website/lib/l10n/app_ru.conf
+++ b/apps/website/lib/l10n/app_ru.conf
@@ -6,6 +6,7 @@
 # npm install -g @pushcorn/hocon-parser
 # parse-hocon package.conf > package.json
 {
+  include file("stats/ru.conf"),
   include file("cards/ru.conf"),
   include file("common/ru.conf"),
   include file("sign_in/ru.conf"),
