--- a/apps/website/pubspec.yaml
+++ b/apps/website/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # https://pub.dev/packages/validated
   # The ultimate dart + flutter string validators.
   dart_ipify: ^1.1.1
+  # https://pub.dev/packages/fl_chart
+  # FL Chart is a highly customizable Flutter chart library
+  fl_chart: ^0.61.0
 
 dev_dependencies:
   build_runner: ^2.3.3
