Stats page UI done

--- a/apps/website/lib/l10n/stats/en.conf
+++ b/apps/website/lib/l10n/stats/en.conf
@@ -1,4 +1,18 @@
 {
   "stats_title": "Stats",
   "stats_subtitle": "Here you can see your language learning statistics. Your every move is recorded!",
+  "stats_chart_activity_title": "Activity in {year}",
+  "@stats_chart_activity_title": {
+    "description": "Year now",
+    "placeholders": {
+      "year": {
+        "type": "int",
+        "example": "2023"
+      }
+    }
+  },
+  "stats_chart_activity_subtitle": "Activity on the passage of the card by month this year. The number of responses is displayed.",
+  "stats_chart_count_1": "Number of available words",
+  "stats_chart_count_2": "The number of unlearned words",
+  "stats_chart_count_3": "Number of words marked as learned",
 }
