--- a/apps/website/lib/l10n/stats/ru.conf
+++ b/apps/website/lib/l10n/stats/ru.conf
@@ -1,4 +1,18 @@
 {
   "stats_title": "Статистика",
   "stats_subtitle": "Здесь вы можете посмотреть свою статистику изучения языка. Фиксируется каждое ваше движение!",
+  "stats_chart_activity_title": "Активность в {year}",
+  "@stats_chart_activity_title": {
+    "description": "Year now",
+    "placeholders": {
+      "year": {
+        "type": "int",
+        "example": "2023"
+      }
+    }
+  },
+  "stats_chart_activity_subtitle": "Активность по изучению слов по месяцам в этом году. Отображается количество ответов.",
+  "stats_chart_count_1": "Количество доступных слов для изучения",
+  "stats_chart_count_2": "Количество не выученных слов в карточке",
+  "stats_chart_count_3": "Количество слов отмеченных как выученные",
 }
