Update UI page friend

--- a/apps/website/lib/l10n/app_en.conf
+++ b/apps/website/lib/l10n/app_en.conf
@@ -6,6 +6,7 @@
 # npm install -g @pushcorn/hocon-parser
 # parse-hocon package.conf > package.json
 {
+  include file("friends/en.conf"),
   include file("stats/en.conf"),
   include file("cards/en.conf"),
   include file("common/en.conf"),
