--- a/apps/website/lib/l10n/stats/en.conf
+++ b/apps/website/lib/l10n/stats/en.conf
@@ -11,7 +11,7 @@
       }
     }
   },
-  "stats_chart_activity_subtitle": "Activity on the passage of the card by month this year. The number of responses is displayed.",
+  "stats_chart_activity_subtitle": "Word learning activity by month this year. The number of responses is displayed.",
   "stats_chart_count_1": "Number of available words",
   "stats_chart_count_2": "The number of unlearned words",
   "stats_chart_count_3": "Number of words marked as learned",
