--- a/apps/website/lib/l10n/app_en.conf
+++ b/apps/website/lib/l10n/app_en.conf
@@ -8,6 +8,7 @@
 {
   include file("friends/en.conf"),
   include file("stats/en.conf"),
+  include file("card/en.conf"),
   include file("cards/en.conf"),
   include file("common/en.conf"),
   include file("sign_in/en.conf"),
