--- a/apps/website/lib/l10n/app_ru.conf
+++ b/apps/website/lib/l10n/app_ru.conf
@@ -8,7 +8,7 @@
 {
   include file("friends/en.conf"),
   include file("stats/ru.conf"),
-  include file("cards/ru.conf"),
+  include file("card/ru.conf"),
   include file("common/ru.conf"),
   include file("sign_in/ru.conf"),
   include file("sign_up/ru.conf"),
